force-app/main/default/objects/SK_ACH_Investment__c/SK_ACH_Investment__c.object-meta.xml
<CustomObject>
    <label>Investment</label>
    <pluralLabel>Investments</pluralLabel>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>