force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Board_Representation__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Board_Representation__c</fullName>
    <label>Board Representation</label>
    <description>Whether fund has board seat</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>