force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Company_Legal_Name__c</fullName>
    <description>Full legal name of portfolio company</description>
    <label>Company Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>