force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Current_Fair_Value__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Current_Fair_Value__c</fullName>
    <description>Most recent valuation fair value</description>
    <label>Current Fair Value</label>
    <summarizedField>SK_ACH_Valuation__c.SK_ACH_Fair_Value__c</summarizedField>
    <summaryForeignKey>SK_ACH_Valuation__c.SK_ACH_Valuation_Investment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>