force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Entry_Valuation__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Entry_Valuation__c</fullName>
    <label>Entry Valuation</label>
    <description>Company valuation at investment</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>