force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Equity_Ownership_Percent__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Equity_Ownership_Percent__c</fullName>
    <description>Percentage of company owned</description>
    <label>Equity Ownership (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>