force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Exit_Date__c</fullName>
    <label>Exit Date</label>
    <description>Date of exit/sale</description>
    <type>Date</type>
</CustomField>