force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Exit_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Exit_Type__c</fullName>
    <label>Exit Type</label>
    <description>Type of exit</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>Strategic Sale</fullName>
            </value>
            <value>
                <fullName>Secondary Sale</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>