force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Exit_Valuation__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Exit_Valuation__c</fullName>
    <label>Exit Valuation</label>
    <description>Final exit proceeds</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>