force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Initial_Investment__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Initial_Investment__c</fullName>
    <label>Initial Investment</label>
    <description>Initial capital deployed</description>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>