force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Date__c</fullName>
    <label>Investment Date</label>
    <description>Date investment was made</description>
    <required>true</required>
    <type>Date</type>
</CustomField>