force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Fund__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Fund__c</fullName>
    <label>Fund</label>
    <description>Fund that made the investment</description>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>SK_ACH_Fund__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>