force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Notes__c</fullName>
    <label>Notes</label>
    <description>Additional notes</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>