force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Status__c</fullName>
    <label>Status</label>
    <description>Current status</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>Under LOI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>