force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Thesis__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Thesis__c</fullName>
    <description>Rationale for investment</description>
    <label>Investment Thesis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>