force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Type__c</fullName>
    <label>Investment Type</label>
    <description>Type of investment</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth Equity</fullName>
                <default>true</default>
                <label>Growth Equity</label>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Minority Stake</fullName>
            </value>
            <value>
                <fullName>Majority Control</fullName>
            </value>
            <value>
                <fullName>Recapitalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>