force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_MOIC__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_MOIC__c</fullName>
    <label>MOIC</label>
    <description>Multiple on Invested Capital (Total Value / Total Invested)</description>
    <formula>IF(SK_ACH_Total_Invested__c &gt; 0, SK_ACH_Total_Value__c / SK_ACH_Total_Invested__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>