force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Realized_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Realized_Gain_Loss__c</fullName>
    <description>Exit Valuation minus Total Invested (for exited investments)</description>
    <formula>IF(TEXT(SK_ACH_Investment_Status__c) = &quot;Exited&quot;, 
    SK_ACH_Exit_Valuation__c - SK_ACH_Total_Invested__c, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realized Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>