force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Total_Distributions_Received__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Distributions_Received__c</fullName>
    <label>Total Distributions Received</label>
    <description>Sum of distributions from this investment (calculated via trigger)</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>