force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Invested__c</fullName>
    <description>Total capital including follow-ons</description>
    <label>Total Invested</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>