force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Value__c</fullName>
    <description>Current Fair Value plus Total Distributions</description>
    <formula>SK_ACH_Current_Fair_Value__c + SK_ACH_Total_Distributions_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>