force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Unrealized_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Unrealized_Gain_Loss__c</fullName>
    <label>Unrealized Gain/Loss</label>
    <description>Current Fair Value minus Total Invested (for active investments)</description>
    <formula>IF(TEXT(SK_ACH_Investment_Status__c) = "Active", 
    SK_ACH_Current_Fair_Value__c - SK_ACH_Total_Invested__c, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>