force-app/main/default/objects/SK_ACH_Investment__c/fields/SK_ACH_Website__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Website__c</fullName>
    <description>Company website</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>