force-app/main/default/objects/SK_ACH_Investment__c/validationRules/Exit_Date_After_Investment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_Date_After_Investment_Date</fullName>
    <active>true</active>
    <description>Exit date must be after investment date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(SK_ACH_Exit_Date__c)),
    SK_ACH_Exit_Date__c &lt; SK_ACH_Investment_Date__c
)</errorConditionFormula>
    <errorDisplayField>SK_ACH_Exit_Date__c</errorDisplayField>
    <errorMessage>Exit date must be on or after the investment date.</errorMessage>
</ValidationRule>