force-app/main/default/objects/SK_ACH_Investment__c/validationRules/Initial_Investment_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Investment_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Initial investment must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Initial_Investment__c &lt;= 0</errorConditionFormula>
    <errorMessage>Initial investment must be greater than zero.</errorMessage>
</ValidationRule>