force-app/main/default/objects/SK_ACH_Investment__c/listViews/Active_Investments.listView-meta.xml
<ListView>
    <fullName>Active_Investments</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Investment_Fund__c</columns>
    <columns>SK_ACH_Investment_Type__c</columns>
    <columns>SK_ACH_Industry__c</columns>
    <columns>SK_ACH_Total_Invested__c</columns>
    <columns>SK_ACH_Current_Fair_Value__c</columns>
    <columns>SK_ACH_MOIC__c</columns>
    <columns>SK_ACH_Unrealized_Gain_Loss__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_ACH_Investment_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Investments</label>
</ListView>