force-app/main/default/objects/SK_ACH_Investment__c/listViews/Portfolio_Performance.listView-meta.xml
<ListView>
    <fullName>Portfolio_Performance</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Investment_Fund__c</columns>
    <columns>SK_ACH_Total_Invested__c</columns>
    <columns>SK_ACH_Total_Value__c</columns>
    <columns>SK_ACH_MOIC__c</columns>
    <columns>SK_ACH_Unrealized_Gain_Loss__c</columns>
    <columns>SK_ACH_Realized_Gain_Loss__c</columns>
    <columns>SK_ACH_Investment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Portfolio Performance</label>
</ListView>